--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -33,7 +33,7 @@
 // $blue-000: #2c84fa;
 // $blue-100: #2869e6;
 // $blue-200: #264caf;
-// $blue-300: #183385;
+$blue-300: #183385;
 //
 // $green-000: #41d693;
 // $green-100: #11b584;
