--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -47,8 +47,8 @@ $blue-300: #183385;
 // $body-text-color: $grey-dk-100 !default;
 // $body-heading-color: $grey-dk-300 !default;
 // $nav-child-link-color: $grey-dk-100 !default;
-// $link-color: $blue-000 !default;
-// $btn-primary-color: $blue-100 !default;
+$link-color: $blue-300 !default;
+$btn-primary-color: $blue-300 !default;
 // $base-button-color: #f7f7f7 !default;
 //
 // //
