--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -33,7 +33,7 @@
 // $blue-000: #2c84fa;
 // $blue-100: #2869e6;
 // $blue-200: #264caf;
-$blue-300: #183385;
+// $blue-300: #183385;
 //
 // $green-000: #41d693;
 // $green-100: #11b584;
@@ -47,7 +47,7 @@ $blue-300: #183385;
 // $body-text-color: $grey-dk-100 !default;
 // $body-heading-color: $grey-dk-300 !default;
 // $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $blue-300 !default;
+$link-color: $blue-300;
 $btn-primary-color: $blue-300 !default;
 // $base-button-color: #f7f7f7 !default;
 //
